[package]
name = "wasm-bindgen-minimal-example"
version = "0.1.0"
authors = ["github.com/anderejd"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
